--- a/5retrieval-module.tex
+++ b/5retrieval-module.tex
@@ -716,7 +716,7 @@ average \textit{Precision@K} result. The result shows that the retrieval engine
 managed to retrieve video shots which were relatively relevant to the user's
 query with an average precision of 76\% with a steady decline in its precision
 as the K (number of results) increases. This was an expected outcome as it is
-common occurance in a regular retrieval engine.
+common occurrence in a regular retrieval engine.
 
 \begin{figure}[!ht]
   \centering
@@ -795,7 +795,7 @@ individually, the \textit{complex} queries shows poorer results. Next, the
 queries were evaluated and plotted in Figure \ref{fig:versionTwoNDCG}(a) and
 Figure \ref{fig:versionTwoNDCG}(b) respectively. Contrary to coarse results
 obtained using \textit{Precision@K}, the \textit{nDCG} score is able to provide
-an indepth evaluation as it takes the relevancy into consideration.
+an in depth evaluation as it takes the relevancy into consideration.
 
 
 \begin{figure}[htb!]
@@ -927,7 +927,7 @@ GT Sample & \begin{tabular}[r]{@{}l@{}}Test 1:\\ Mirror\end{tabular} & \begin{ta
   Overall, Chamfer Distance and Dynamic Time Warping method was able to provide
   comparable results, however, Chamfer Distance came up top as it is able to
   provide a larger margin between the best and worst test cases. This property
-  is desireable when comparing huge numbers of trajectories.}
+  is desirable when comparing huge numbers of trajectories.}
 \label{table:DistanceCompare}
 
 \end{table}
