--- a/llt.bib
+++ b/llt.bib
@@ -771,3 +771,74 @@ journal={Colour metric: https://www.compuphase.com/cmetric.htm},   year={2018}}
   journal={technology. ihs. com},
   year={2016}
 }
+
+@article{paschos2001perceptually,
+  title={Perceptually uniform color spaces for color texture analysis: an empirical evaluation},
+  author={Paschos, George},
+  journal={IEEE Transactions on Image Processing},
+  volume={10},
+  number={6},
+  pages={932--937},
+  year={2001},
+  publisher={IEEE}
+}
+
+@inproceedings{wang2014cdnet,
+  title={CDnet 2014: An expanded change detection benchmark dataset},
+  author={Wang, Yi and Jodoin, Pierre-Marc and Porikli, Fatih and Konrad, Janusz and Benezeth, Yannick and Ishwar, Prakash},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition workshops},
+  pages={387--394},
+  year={2014}
+}
+
+@article{young1802ii,
+  title={II. The Bakerian Lecture. On the theory of light and colours},
+  author={Young, Thomas},
+  journal={Philosophical transactions of the Royal Society of London},
+  number={92},
+  pages={12--48},
+  year={1802},
+  publisher={The Royal Society London}
+}
+
+@book{travis1991effective,
+  title={Effective color displays: Theory and practice},
+  author={Travis, David},
+  volume={1991},
+  year={1991},
+  publisher={Academic press London}
+}
+
+@misc{jaffer_2017, title={Color-Name Dictionaries}, url={https://people.csail.mit.edu/jaffer/Color/Dictionaries}, journal={Color-Name Dictionaries}, author={Jaffer, Aubrey}, year={2017}} 
+
+@misc{raveling, title={X11 color database}, url={https://groups.google.com/forum/?fromgroups=#!topic/comp.windows.x/AYPozZhQxok}, journal={X11 color database}, author={Raveling, Paul}, year={1989}} 
+
+@misc{crayolacolor, title={Explore Color}, url={https://www.crayola.com/explore-colors.aspx}, journal={Explore Color}, author={Crayola}, note = {Accessed: 2020-03-13}, year={2020}} 
+
+
+@inproceedings{kulis2009kernelized,
+  title={Kernelized locality-sensitive hashing for scalable image search},
+  author={Kulis, Brian and Grauman, Kristen},
+  booktitle={2009 IEEE 12th international conference on computer vision},
+  pages={2130--2137},
+  year={2009},
+  organization={IEEE}
+}
+
+@inproceedings{gionis1999similarity,
+  title={Similarity search in high dimensions via hashing},
+  author={Gionis, Aristides and Indyk, Piotr and Motwani, Rajeev and others},
+  booktitle={Vldb},
+  volume={99},
+  number={6},
+  pages={518--529},
+  year={1999}
+}
+
+@inproceedings{indyk1998approximate,
+  title={Approximate nearest neighbors: towards removing the curse of dimensionality},
+  author={Indyk, Piotr and Motwani, Rajeev},
+  booktitle={Proceedings of the thirtieth annual ACM symposium on Theory of computing},
+  pages={604--613},
+  year={1998}
+}
