--- a/thesis.tex
+++ b/thesis.tex
@@ -6,6 +6,7 @@
 \usepackage[T1]{fontenc}
 \usepackage{graphicx}
 \usepackage{enumitem}
+\usepackage{enumerate}
 \usepackage{float}
 \usepackage[noend]{algcompatible}
 
@@ -102,8 +103,8 @@ breaklines=true,breakatwhitespace=true}
 
 \author{Clarence Cheong Weihan}
 \title{Extraction and Retrieval of Vehicle Semantics for Long-Term Car Park Videos}
-\submissionyear{2019}
-\submissionmonth{May}
+\submissionyear{2020}
+\submissionmonth{April}
 \faculty{Faculty of Computing and Informatics}
 \degree{Master~of~Science (Information~Technology)}
 \qualification{B.Eng.~(Hons), Multimedia University, Malaysia\\%
@@ -155,7 +156,7 @@ Thank you everyone! Much blessings.
 \listoftables\clearpage
 \listoffigures\clearpage}
 
-\prefacefromfile{preface}
+% \prefacefromfile{preface}
 
 \mainmatter
 
